# meds

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: code-quality-main.yml  code-quality-pr.yml  meds-etl-test.yml  python-build.yaml  python-build.yml  python-test.yml  tests.yaml
src/esds/: __init__.py
src/event_stream_data_standard/: __init__.py
src/meds/: __init__.py  flexible_schema.py  schema.py
static/: refs.bib
tests/: test_schema.py
