[build-system]
requires = ["setuptools >= 69.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meds"
dynamic = ["version"]
description = "A data standard for working with event stream data"
readme = "README.md"
license = {text = "Apache-2.0"}

dependencies = [
    "pyarrow >= 8",
    "jsonschema >= 4.0.0",
    "typing_extensions >= 4.0",
]

[tool.setuptools_scm]
version_file = "src/meds/_version.py"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line_length = 120
target_version = ['py310']
