[build-system]
requires = ["setuptools >= 69.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meds"
dynamic = ["version"]
description = "A data standard for working with event stream data"
authors = [
  {name="Matthew McDermott", email="mattmcdermott8@gmail.com"},
  {name="Ethan Steinberg", email="ethanid@stanford.edu"},
  {name="Tom Pollard", email="tpollard@mit.edu"},
  {name="Robin van de Water", email="Robin.VandeWater@hpi.de"},
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyarrow >= 8",
    "jsonschema >= 4.0.0",
    "typing_extensions >= 4.0",
]

[project.urls]
Homepage = "https://medical-event-data-standard.github.io/"
Issues = "https://github.com/Medical-Event-Data-Standard/meds/issues"

[project.optional-dependencies]
dev = ["pre-commit<4"]
tests = ["pytest", "pytest-cov[toml]"]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
]

[tool.setuptools_scm]
version_file = "src/meds/_version.py"

[tool.coverage.report]
omit = ["src/meds/_version.py"]
